--- a/src/app/home/weather/weather.component.html
+++ b/src/app/home/weather/weather.component.html
@@ -10,7 +10,7 @@
     </p>
     <p>
       <!-- <a href="/forecast/95742">Show 5-day forecast for Rancho Cordova</a> -->
-      <a [routerLink]="['/forecast']">Show 5-day forecast for Rancho Cordova</a>
+      <a (click)="onLoadFivedayWeather()">Show 5-day forecast for Rancho Cordova</a>
     </p>
   </div>
   <div>
