--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,9 +4,20 @@
   
   <div>
 
-    <div *ngFor="let weatherDetails of weatherDetailsArray">
-      <app-weather [weatherDetails]="weatherDetails" (onweatherRemoved)="getLatestAfterRemove()"></app-weather>
+    <div *ngFor="let zipcode of zipcodes">
+      <app-weather
+        [zipcode]="zipcode"
+        (onweatherRemoved)="getLatestAfterRemove()">
+      </app-weather>
+      <!-- <app-weather 
+        [weatherDetails]="weatherDetails"
+        [zipcode]="weatherDetails.zipCode"
+        (onweatherRemoved)="getLatestAfterRemove()">
+      </app-weather> -->
     </div>
+    <!-- <div *ngFor="let zipcode of zipcodes">
+      <app-weather [zipcode]="zipcode" (onweatherRemoved)="getLatestAfterRemove()"></app-weather>
+    </div> -->
 
   </div>
 </div>
