--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,9 +3,7 @@
   <app-search (onSearch)="getLatestList($event)"></app-search>
   <div>
     <div *ngFor="let zipcode of zipcodes">
-      <app-weather
-        [zipcode]="zipcode"
-        (onweatherRemoved)="getLatestAfterRemove()">
+      <app-weather [zipcode]="zipcode" (onweatherRemoved)="getLatestAfterRemove()">
       </app-weather>
     </div>
   </div>
